<resources>
    <string name="app_name">SmartLabels</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="edit_label">Edit label</string>
    <string name="remove_label">Remove label</string>
    <string name="add_label">Add label</string>
    <string name="label_header">Заголовок заметки</string>
    <string name="enter_label_description">Введите текст заметки</string>
    <string name="add_label_button">Add Label</string>
    <string name="cancel">Cancel</string>
    <string name="enter_label_name">Введите название заметки!</string>
    <string name="weather_in_your_city">Температура в вашем городе: </string>
    <string name="title_activity_label_info">LabelInfoActivity</string>
    <string name="ok_message">OK</string>
    <string name="edit">EDIT</string>
    <string name="save">SAVE</string>
    <string name="no_labels">Нет записей</string>
    <string name="share">SHARE</string>
    <string name="share_resut">Share label</string>
    <string name="label_info">Label info</string>
</resources>
