<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    tools:context=".Activities.AddLabelActivity">

    <EditText
        android:id="@+id/add_label_header_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/label_header"
        android:inputType="textImeMultiLine"
        android:paddingTop="8dp"
        android:textAlignment="center"
        android:textColor="#b1acac"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="16dp" />

    <ScrollView
        android:id="@+id/add_label_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/add_label_header_textview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp">

            <EditText
                android:id="@+id/add_label_description_edittext"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/enter_label_description"
                android:paddingTop="8dp"
                android:textAlignment="center"
                android:textColor="#b1acac"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@+id/add_label_scrollview">

                <Button
                    android:id="@+id/add_label_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/save" />

                <Button
                    android:id="@+id/cancel_add_label_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel" />
            </LinearLayout>
        </LinearLayout>


    </ScrollView>


</android.support.constraint.ConstraintLayout>